# zwi

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  zwi  zwibok
src/: zwibok.py
src/zwi/: __init__.py  asset_cache.py  core.py  qt_gui.py  util.py  zwi_ui_v0.ui
src/zwi/scripts/: zwi.py  zwibok.py
tests/: conftest.py  test_core.py
zwi/: zwi.py  zwi_ui_v0.ui  zwibok.py
zwi/util/: __init__.py  asset_cache.py  core.py  util.py
